--- a/index.html
+++ b/index.html
@@ -9,139 +9,147 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&family=Roboto:wght@700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
-  <title>Document</title>
   <link rel="stylesheet" href="./css/styles.css" />
+
+  <title>WebStudio</title>
 </head>
 
 <body>
-  <header class="header-link">
-    <nav class="nav-link">
-      <a href="./index.html" class="logo">WebStudio</a>
-      <ul class="nav">
-        <li><a href="/" class="link-header">Studio</a></li>
-        <li><a href="/" class="link-header">Portfolio</a></li>
-        <li><a href="/" class="link-header">Contacts</a></li>
+  <header class="header">
+    <a class="nav-logo-header" href="./index.html">Web<span class="logo-style">Studio</span></a>
+    <nav class="header-nav">
+      <ul class="header-nav-list">
+        <li class="header-nav-item"><a class="item-nav-link" href="/">Studio</a></li>
+        <li class="header-nav-item"><a class="item-nav-link" href="/">Portfolio</a></li>
+        <li class="header-nav-item"><a class="item-nav-link" href="/">Contacts</a></li>
       </ul>
     </nav>
-    <address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" class="link-header">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="link-header">+11 (000) 111-11-11</a>
+    <address class="header-contacts">
+      <ul class="header-contacts-list">
+        <li class="header-contacts-item"><a class="header-contacts-link"
+            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-contacts-item"><a class="header-contacts-link" href="tel:+110001111111">+11 (000)
+            111-11-11</a>
         </li>
       </ul>
     </address>
   </header>
   <main>
+
     <!--buton Order Servic-->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+
+    <section class="hero">
+      <h1 class="hero-title">Effective Solutions for Your Business</h1>
+      <button class="hero-btn" type="button">Order Service</button>
     </section>
+
     <!--Опис-->
-    <section>
-      <h2>Test</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
+
+    <section class="test">
+      <h2 class="test-title">Test</h2>
+      <ul class="test-list">
+        <li class="test-item">
+          <h3 class="test-subtitle">Strategy</h3>
+          <p class="test-item-text">
             Our goal is to identify the business
             problem to walk away with the perfect and creative solution.
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>
+          <h3 class="test-subtitle">Punctuality</h3>
+          <p class="test-item-text">
             Bring the key message to the brand's audience for the best price within the shortest possible
             time.
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>
+          <h3 class="test-subtitle">Diligence</h3>
+          <p class="test-item-text">
             Research and confirm brands that present the strongest digital growth opportunities and minimize
             risk.
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>
+          <h3 class="test-subtitle">Technologies</h3>
+          <p class="test-item-text">
             Design practice focused on digital experiences. We bring forth a deep passion for
             problem-solving.
           </p>
         </li>
       </ul>
     </section>
+
     <!--Team-->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
+
+    <section class="team">
+      <h2 class="team-title">Our Team</h2>
+      <ul class="team-list">
+        <li class="team-item">
           <img src="./images/img-1.jpg" width="264" height="260" alt="photo-Mark Guerrero" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="team-subtitle">Mark Guerrero</h3>
+          <p class="team-item-text">Product Designer</p>
         </li>
         <li>
           <img src="./images/img-2.jpg" width="264" height="260" alt="photo-Tom Ford" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="team-subtitle">Tom Ford</h3>
+          <p class="team-item-text">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/img-3.jpg" width="264" height="260" alt="photo-Camila Garcia" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="team-subtitle">Camila Garcia</h3>
+          <p class="team-item-text">Marketing</p>
         </li>
         <li>
           <img src="./images/img-4.jpg" width="264" height="260" alt="photo-Daniel Wilson" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="team-subtitle">Daniel Wilson</h3>
+          <p class="team-item-text">UI Designer</p>
         </li>
       </ul>
     </section>
+
     <!--портфоліо-->
-    <section>
-      <h2>Our Portfolio</h2>
-      <ul>
-        <li>
+
+    <section class="portfolio">
+      <h2 class="portfolio-title">Our Portfolio</h2>
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
           <img src="./images/img-bankapp.jpg" width="360" height="420" alt="photo-Bank App" />
-          <h3>Banking App</h3>
-          <p>App</p>
+          <h3 class="portfolio-subtitle">Banking App</h3>
+          <p class="portfolio-item-text">App</p>
         </li>
         <li>
           <img src="./images/img-payment.jpg" width="360" height="300" alt="photo-Cashless Payment" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-subtitle">Cashless Payment</h3>
+          <p class="portfolio-item-text">Marketing</p>
         </li>
         <li>
           <img src="./images/img-meditationapp.jpg" width="360" height="300" alt="photo-Meditation App" />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3 class="portfolio-subtitle">Meditation App</h3>
+          <p class="portfolio-item-text">App</p>
         </li>
         <li>
           <img src="./images/img-taxi.jpg" width="360" height="300" alt="photo-Taxi Service" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-subtitle">Taxi Service</h3>
+          <p class="portfolio-item-text">Marketing</p>
         </li>
         <li>
           <img src="./images/img-screen.jpg" width="360" height="300" alt="photo-Screen Illustrations" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+          <p class="portfolio-item-text">Design</p>
         </li>
         <li>
           <img src="./images/img-online.jpg" width="360" height="300" alt="photo-Online Courses" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-subtitle">Online Courses</h3>
+          <p class="portfolio-item-text">Marketing</p>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>
+  <footer class="footer">
+    <a class="nav-logo" href="./index.html">Web<span class="logo-link">Studio</span></a>
+    <p class="footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
   </footer>
