--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
   <header class="header">
-    <a class="nav-logo-header" href="./index.html">Web<span class="logo-style">Studio</span></a>
     <nav class="header-nav">
+      <a class="nav-logo-header" href="./index.html">Web<span class="logo-style-header">Studio</span></a>
       <ul class="header-nav-list">
         <li class="header-nav-item"><a class="item-nav-link" href="/">Studio</a></li>
         <li class="header-nav-item"><a class="item-nav-link" href="/">Portfolio</a></li>
@@ -91,17 +91,17 @@
           <h3 class="team-subtitle">Mark Guerrero</h3>
           <p class="team-item-text">Product Designer</p>
         </li>
-        <li>
+        <li class="team-item">
           <img src="./images/img-2.jpg" width="264" height="260" alt="photo-Tom Ford" />
           <h3 class="team-subtitle">Tom Ford</h3>
           <p class="team-item-text">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-item">
           <img src="./images/img-3.jpg" width="264" height="260" alt="photo-Camila Garcia" />
           <h3 class="team-subtitle">Camila Garcia</h3>
           <p class="team-item-text">Marketing</p>
         </li>
-        <li>
+        <li class="team-item">
           <img src="./images/img-4.jpg" width="264" height="260" alt="photo-Daniel Wilson" />
           <h3 class="team-subtitle">Daniel Wilson</h3>
           <p class="team-item-text">UI Designer</p>
@@ -148,7 +148,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="nav-logo" href="./index.html">Web<span class="logo-link">Studio</span></a>
+    <a class="logo-footer" href="./index.html">Web<span class="logo-style-footer">Studio</span></a>
     <p class="footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
