--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <nav class="header-nav">
       <a class="nav-logo-header" href="./index.html">Web<span class="logo-style-header">Studio</span></a>
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a class="item-nav-link" href="/">Studio</a></li>
-        <li class="header-nav-item"><a class="item-nav-link" href="/">Portfolio</a></li>
-        <li class="header-nav-item"><a class="item-nav-link" href="/">Contacts</a></li>
+        <li class="header-nav-item"><a href="./index.html" class="item-nav-link">Studio</a></li>
+        <li class="header-nav-item"><a href="#portfolio" class="item-nav-link">Portfolio</a></li>
+        <li class="header-nav-item"><a href="#contacts" class="item-nav-link">Contacts</a></li>
       </ul>
     </nav>
-    <address class="header-contacts">
+    <address class="header-contacts" id="contacts">
       <ul class="header-contacts-list">
         <li class="header-contacts-item"><a class="header-contacts-link"
             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -111,7 +111,7 @@
 
     <!--портфоліо-->
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <h2 class="portfolio-title">Our Portfolio</h2>
       <ul class="portfolio-list">
         <li class="portfolio-item">
