--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <nav class="header-nav">
       <a class="nav-logo-header" href="./index.html">Web<span class="logo-style-header">Studio</span></a>
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="./index.html" class="item-nav-link">Studio</a></li>
-        <li class="header-nav-item"><a href="#portfolio" class="item-nav-link">Portfolio</a></li>
-        <li class="header-nav-item"><a href="#contacts" class="item-nav-link">Contacts</a></li>
+        <li class="header-nav-item"><a class="item-nav-link" href="./index.html">Studio</a></li>
+        <li class="header-nav-item"><a class="item-nav-link" href="#portfolio">Portfolio</a></li>
+        <li class="header-nav-item"><a class="item-nav-link" href="#contacts">Contacts</a></li>
       </ul>
     </nav>
     <address class="header-contacts" id="contacts">
